--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         crossorigin=""
     />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
-    <script src="dist/leaflet-simple-locate.min.js"></script>
+    <script src="src/leaflet-simple-locate.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/low-pass-filter@1.0.0/dist/low-pass-filter.min.js"></script>
 
     <link rel="stylesheet" href="examples/demo.css" />
