--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="examples/demo.css" />
     <link rel="stylesheet" href="examples/style.css" />
     <link rel="stylesheet" href="examples/location-styles.css" />
+    <link rel="stylesheet" href="examples/location-logger.css" />
 
     <style>
       .filter-panel {
@@ -480,6 +481,7 @@
     </div>
 
     <script src="dist/location-app.js"></script>
+    <script src="dist/location-logger.js"></script>
 
     <script>
       // Default parametreler - orijinal değerler
