--- a/index.html
+++ b/index.html
@@ -594,10 +594,21 @@
         // SimpleLocate nesnesinin seçeneklerini güncelle
 
         if (window.filterControl) {
+          // Altitude referansı değişti mi kontrol et
+          const oldAltRef = window.filterControl.options.altitudeReference;
+          const newAltRef = settings.altitudeReference;
+          
           // Tüm ayarları güncelle
           Object.keys(settings).forEach((key) => {
             window.filterControl.options[key] = settings[key];
           });
+
+          // Altitude referansı değiştiyse ve konum varsa, marker'ı güncelle
+          // Bu, afterDeviceMove callback'ini tetikler ve altitude yeniden hesaplanır
+          if (oldAltRef !== newAltRef && window.filterControl._latitude && window.filterControl._altitude !== undefined) {
+            console.log(`Altitude referansı değişti: ${oldAltRef} → ${newAltRef}, marker güncelleniyor...`);
+            window.filterControl._updateMarker();
+          }
 
           // Uygulama bilgisi
           showStatusMessage("Filtre ayarları uygulandı");
