--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
 
     <!-- Leaflet.GridLayer.GoogleMutant Plugin -->
     <script src="https://unpkg.com/leaflet.gridlayer.googlemutant@latest/dist/Leaflet.GoogleMutant.js"></script>
-    
-    <!-- Low Pass Filter kütüphanesi (leaflet-simple-locate.js'den önce yüklenmeli) -->
+
+    <script src="dist/leaflet-simple-locate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/low-pass-filter@1.0.0/dist/low-pass-filter.min.js"></script>
- 
-    <!-- Development: src dosyası kullanıyoruz -->
-    <script src="src/leaflet-simple-locate.js"></script>
 
     <link rel="stylesheet" href="examples/demo.css" />
     <link rel="stylesheet" href="examples/style.css" />
